Add manual blending for IE (unoptimized at the moment)

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
       }
 
       #sources canvas {
+        height: 128px;
         vertical-align: top;
         width: 128px;
       }
 
       #image canvas {
+        height: 512px;
         width: 512px;
       }
     </style>
