Add experimental luma compensation

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       &emsp;&emsp;&emsp;
       <label>Period: <input type="range" name="period" min="1" max="3000" value="400" style="vertical-align: middle;" /></label>
       <output name="for-period"></output>
+      &emsp;&emsp;&emsp;
+      <label><input type="checkbox" name="luma">Luma</label>
     </div>
 
     <div id="filename"></div>
@@ -43,8 +45,8 @@
     <div id="image"></div>
 
     <div>
-      <button name="prev"><div style="transform: scaleX(-1);">▶</div></button>
-      <button name="next">▶</button>
+      <button name="prev">Prev</button>
+      <button name="next">Next</button>
       &emsp;&emsp;&emsp;
       <a href="#70">#70</a>
       <a href="#97">#97</a>
